# HUFFMAN

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  huffman.cpp  tree.cpp
lib/headers/: huffman.h  tree.h
lib/tests/: huffman_testing.cpp
lib/tests/gtest/: gtest-all.cc
